[package]
name = "context"
description = "Authn/z context that is passed between TheHackerApp services"
version = "0.3.3"
license = "MIT"
homepage = "https://github.com/TheHackerApp/context"
repository = "https://github.com/TheHackerApp/context.git"
edition = "2021"
publish = ["wafflehacks"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "6.0", default-features = false, optional = true }
axum = { version = "0.7", default-features = false, features = ["headers"], optional = true }
headers = { version = "0.3", optional = true }
http = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
axum = { version = "0.7", default-features = false, features = ["headers", "query"] }
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[features]
default = []
extract = ["axum", "headers", "http"]
graphql = ["async-graphql"]
