[package]
name = "context"
description = "Authn/z context that is passed between TheHackerApp services"
version = "0.5.1"
license = "MIT"
homepage = "https://github.com/TheHackerApp/context"
repository = "https://github.com/TheHackerApp/context.git"
edition = "2021"
publish = ["wafflehacks"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "6.0", default-features = false, optional = true }
async-trait = { version = "0.1.80", optional = true }
axum-core = { version = "0.3", default-features = false, optional = true }
headers = { version = "0.3", optional = true }
http = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
axum = { version = "0.6", default-features = false, features = ["query"] }
serde_json = "1"
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[features]
axum = ["async-trait", "axum-core", "headers"]
default = []
graphql = ["async-graphql"]
headers = ["dep:headers", "http"]
